# HyFlow1D

./: .gitignore  AGENTS.md  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md
.Jules/: bolt.md  palette.md
.jules/: bolt.md  sentinel.md
include/: dg_solver.hpp  fv_solver.hpp  hybrid_coupling.hpp  numerics.hpp  solver.hpp  term_colors.hpp
scripts/: plot_results.py
src/: dg_solver.cpp  fv_solver.cpp  hybrid_coupling.cpp  main.cpp  numerics.cpp
tests/: benchmark_dg.cpp  benchmark_fv.cpp  benchmark_plot.cpp  benchmark_step.cpp  benchmark_update.cpp  test_hybrid_security.cpp  test_numerics.cpp  test_security.cpp  test_solvers.cpp  test_validation.cpp
webapp/: .gitignore  package.json  server.ts  tailwind.config.js
webapp/playwright-report/: index.html
webapp/src/: App.css  App.tsx
webapp/src/components/: Background.tsx
webapp/tests/: app.spec.ts
